--- a/remake.yml
+++ b/remake.yml
@@ -126,10 +126,10 @@ targets:
       - read_csv("data/leaves_per_length.csv")
       - process_leaves_per_length(.)
 
-  leafLifespan:
+  leafLoss:
     command:
       - read_csv("data/leaderGrowthLL.csv")
-      - process_leaf_lifespan(., leavesPerLength)
+      - process_leaf_loss(., leavesPerLength)
 
   variable_list:
     command:
@@ -137,7 +137,7 @@ targets:
 
   SummaryInd:
     command:
-      - combine_by_individual(IndividualsList, Growth_all, ReproductiveCosts_all, LMA, leafLifespan, wood_density_spp, seedsize)
+      - combine_by_individual(IndividualsList, Growth_all, ReproductiveCosts_all, LMA, leafLoss, wood_density_spp, seedsize)
       - sort_by_variable(., variable_list)
 
   SummarySppAge:
