Substantial reworking of Supp Matt for Accessories paper
- extract plant map images form power powerpoint
- fix table widths
- reorder materials, section headers etc

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ ms/Accessory/Wenk-Accessory-SI.tex
 ms/Accessory/Wenk-Accessory-SI.pdf
 ms/Accessory/figure/
 ms/Accessory/output/
+ms/plant_maps/full
 results.md
 ~*.doc*
 *.whisker
