Completing supplementary information

--- a/remake.yml
+++ b/remake.yml
@@ -78,6 +78,7 @@ targets:
       - PHPH_GraphMaps
       - PILI_GraphMaps
       - PUTU_GraphMaps
+      - R/figures.R
 
   # Data --------------------------------------
   IndividualsList:
