--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ ms/Accessory/ms-supp.tex
 ms/Accessory/ms-supp.pdf
 ms/Accessory/Wenk-Accessory-SI.tex
 ms/Accessory/Wenk-Accessory-SI.pdf
-ms/Accessory/figure/
+ms/Accessory/figure*
 ms/Accessory/output/
 ms/plant_maps/full
 results.md
