--- a/remake.yml
+++ b/remake.yml
@@ -20,26 +20,6 @@ sources:
 include:
   - remake_species_data.yml
 
-plot_options:
-  tall:
-    width: 4
-    height: 8
-  extra_wide:
-    width: 15
-    height: 5
-  wide:
-    width: 8
-    height: 4
-  small_square:
-    width: 4
-    height: 4
-  med_square:
-    width: 6
-    height: 6
-  large_square:
-    width: 8
-    height: 8
-
 targets:
   all:
     depends:
@@ -47,6 +27,37 @@ targets:
 
   # Papers --------------------------------------
 
+  ms-Accessory:
+   depends:
+    - ms/Accessory/Wenk-Accessory-SI.pdf
+    - ms/Accessory/figures/allocation.pdf
+    - ms/Accessory/figures/seed_size_tests.pdf
+    - ms/Accessory/figures/seed_size_scaling.pdf
+    - ms/Accessory/figures/proxy.pdf
+
+  ms/Accessory/figures/allocation.pdf:
+    command: figure_accessory_bar(SummarySpp)
+    plot:
+        width: 10
+        height: 6
+
+  ms/Accessory/figures/seed_size_tests.pdf:
+    command: figure_accessory_v_seed_size(SummarySpp)
+    plot:
+        width: 8
+        height: 8
+
+  ms/Accessory/figures/seed_size_scaling.pdf:
+    command: figure_scaling_costs_seed_size(SummarySpp)
+    plot:
+        width: 6
+        height: 4
+
+  ms/Accessory/figures/proxy.pdf:
+    command: figure_proxy(SummaryInd)
+    plot:
+        width: 11
+        height: 5
 
   ms/Accessory/Wenk-Accessory-SI.pdf:
     command: latex_build("ms/Accessory/Wenk-Accessory-SI.tex", clean=TRUE)
