Move figures into remake

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ ms/Accessory/Wenk-Accessory-SI.tex
 ms/Accessory/Wenk-Accessory-SI.pdf
 ms/Accessory/figure*
 ms/Accessory/output/
+ms/RA/figures/*
+ms/RA/old/*
 ms/plant_maps/full
 results.md
 release
