--- a/remake.yml
+++ b/remake.yml
@@ -27,6 +27,64 @@ targets:
 
   # Papers --------------------------------------
 
+  ms-RA:
+    depends:
+    - ms/RA/figures/RA_demo.pdf
+    - ms/RA/figures/RA_all.pdf
+    - ms/RA/figures/life_history.pdf
+    - ms/RA/figures/investment_weight.pdf
+    - ms/RA/figures/leaf_area.pdf
+    - ms/RA/figures/leaf_loss.pdf
+    - ms/RA/figures/leafarea_production.pdf
+
+  ms/RA/figures/RA_demo.pdf:
+    command: figure_allocation_demo(SummarySppAge)
+    plot:
+      width: 12
+      height: 4
+
+  ms/RA/figures/accessory.pdf:
+    command: figure_accessory_bar(SummarySpp)
+    plot:
+      width: 10
+      height: 6
+
+  ms/RA/figures/RA_all.pdf:
+    command: figure_allocation_all(SummaryInd, SummarySppAge)
+    plot:
+      width: 16
+      height: 12
+
+  ms/RA/figures/life_history.pdf:
+    command: figure_life_history(SummarySpp, SummarySppAge)
+    plot:
+      width: 8
+      height: 8
+
+  ms/RA/figures/investment_weight.pdf:
+    command: figure_investment_weight(SummaryInd)
+    plot:
+      width: 12
+      height: 12
+
+  ms/RA/figures/leaf_area.pdf:
+    command: figure_leaf_area(SummaryInd)
+    plot:
+      width: 12
+      height: 12
+
+  ms/RA/figures/leaf_loss.pdf:
+    command: figure_leaf_loss(SummarySppAge)
+    plot:
+      width: 4
+      height: 4
+
+  ms/RA/figures/leafarea_production.pdf:
+    command: figure_leafarea_production(SummaryInd)
+    plot:
+      width: 16
+      height: 12
+
   ms-Accessory:
    depends:
     - ms/Accessory/Wenk-Accessory-SI.pdf
