Update figures and MS for analysis on RA

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ ms/Accessory/Wenk-Accessory-SI.tex
 ms/Accessory/Wenk-Accessory-SI.pdf
 ms/Accessory/figure*
 ms/Accessory/output/
+ms/Accessory/old/
+ms/RA/Wenk-RA-SI.pdf
+ms/RA/Wenk-RA-SI.tex
 ms/RA/figures/*
 ms/RA/old/*
 ms/plant_maps/full
