--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ ms/Accessory/Wenk-Accessory-SI.pdf
 ms/Accessory/figure*
 ms/Accessory/output/
 ms/Accessory/old/
+ms/growth_plots/*
+ms/map.pdf
 ms/RA/Wenk-RA-SI.pdf
 ms/RA/Wenk-RA-SI.tex
 ms/RA/figures/*
