Fixing some errors, variables accidentally deleted

--- a/remake.yml
+++ b/remake.yml
@@ -24,6 +24,8 @@ include:
 targets:
   all:
     depends:
+      - ms-RA
+      - ms-Accessory
       - export
 
   # Papers --------------------------------------
